--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link rel="icon" type="image/png" href="/wordle-speedrun/assets/favicon.png" />
   </head>
   <body>
-    <h1 class="title">Wordle <span class="title-word-clone">By Vishal and Mohammed</span></h1>
+    <h1 class="title">Wordle <span class="title-word-clone">By Vishal and Mahamed</span></h1>
     <div id="game"></div>
     <div class = "grid"></div>
         <div class = "box wrong"></div>
