--- a/index.html
+++ b/index.html
@@ -7,54 +7,23 @@
     <meta name="theme-color" content="#121213" />
 
     <!-- HTML Meta Tags -->
-    <title>Wordleg</title>
-    <meta name="description" content="Wordle clone by DoubleDebug" />
-
-    <!-- Facebook Meta Tags -->
-    <meta
-      property="og:url"
-      content="https://doubledebug.github.io/wordle-speedrun/"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Wordle clone by DoubleDebug" />
-    <meta
-      property="og:description"
-      content="Wordle game speedrun in HTML, CSS and JavaScript"
-    />
-    <meta
-      property="og:image"
-      content="https://doubledebug.github.io/wordle-speedrun/assets/og-image.png"
-    />
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="doubledebug.github.io" />
-    <meta
-      property="twitter:url"
-      content="https://doubledebug.github.io/wordle-speedrun/"
-    />
-    <meta name="twitter:title" content="Wordle clone | DoubleDebug" />
-    <meta
-      name="twitter:description"
-      content="Wordle game speedrun in HTML, CSS and JavaScript"
-    />
-    <meta
-      name="twitter:image"
-      content="https://doubledebug.github.io/wordle-speedrun/assets/og-image.png"
-    />
-
+    <title>Wordle</title>
+    <meta name="description" content="Wordle" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="/wordle-speedrun/assets/favicon.png" />
   </head>
   <body>
     <h1 class="title">Wordle <span class="title-word-clone">By Vishal and Mahamed</span></h1>
     <div id="game"></div>
     <div class = "grid"></div>
+        <h1 style="color: white;">Instructions:</h1>
         <div class = "box wrong"></div>
+        <h2 style="color: white;">Correct letter wrong placement</h2>
         <div class = "box right"></div>
+        <h2 style="color: white;">Correct letter correct placement</h2>
         <div class = "box"></div>
+        <h2 style="color: white;">Blank</h2>
         <div class = "box">A</div>
-        <div class = "box">B</div>
+        <h2 style="color: white;">Letter entered but word not submitted</h2>
     <script src="index.js" type="module"></script>
   </body>
 </html>
