--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div>
+    <img src="docs/design_system/Capture.PNG" alt="Logo" width="250" height="150" class="image">
     <h1 class="title">Wordle <span class="title-word-clone">By Vishal and Mahamed</span></h1>
+    </div>
     <div id="game"></div>
     <div class = "grid"></div>
         <h1 style="color: white;">Instructions:</h1>
